--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                                 style="color: #fff;">jyotiprakash1405@gmail.com</a></span>
                     </li>
                     <li>
-                        <span class="icon"><a href="https://github.com/shaan1405" target="_blank"><i
+                        <span class="icon"><a href="https://github.com/jyotiprakash1405" target="_blank"><i
                                     class="fa fa-github" aria-hidden="true"></i></a></span>
-                        <span class="text"><a href="https://github.com/shaan1405" target="_blank"
+                        <span class="text"><a href="https://github.com/jyotiprakash1405" target="_blank"
                                 style="color: #fff;">Github</a></span>
                     </li>
                     <li>
